--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "proxy": "^0.2.3"
+    "cors": "^2.7.1",
+    "express": "^4.13.3",
+    "request": "^2.67.0"
   }
 }
