--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cached-request": "^0.1.4",
     "cors": "^2.7.1",
     "express": "^4.13.3",
     "request": "^2.67.0"
